[package]
name = "base36"
version = "0.0.0"
authors = ["Luka Teras <luka@sdf.org>"]
description = "Base36 encoder/decoder"
readme = "README.md"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/lukateras/rust-base36"
keywords = ["base36", "encode", "decode"]
categories = ["encoding"]
edition = "2021"
exclude = [".gitignore"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2.11"
