[package]
name = "base36"
version = "1.0.1"
authors = ["Luka Teras <luka@sdf.org>"]
edition = "2021"
description = "Base36 encoder/decoder"
readme = "README.md"
repository = "https://github.com/lukateras/rust-base36"
license = "BSD-2-Clause-Patent"
keywords = ["base36", "encode", "decode"]
categories = ["encoding"]
exclude = [".github", ".gitignore"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2.11"
